--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.0",
+    "@actions/io": "^1.0.1",
     "@actions/tool-cache": "^1.1.2",
     "@types/node": "^13.1.4",
     "@zeit/ncc": "^0.21.0",
