--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "run": "ts-node ./src/index.ts",
-    "build": "ncc build ./src/index.ts -o dist"
+    "build": "ncc build ./src/index.ts -o dist -m -s --no-source-map-register"
   },
   "keywords": [],
   "author": {
