--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mathrix-education/setup-sentry-cli",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Install the Sentry CLI in your GitHub Actions workflow.",
   "keywords": [
     "github-actions",
@@ -25,9 +25,12 @@
   "scripts": {
     "clean": "rimraf dist",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint \"{src,tests}/**/*.ts\"",
-    "lint:fix": "eslint \"{src,tests}/**/*.ts\" --fix",
-    "build": "npm run clean && ncc build --source-map --no-source-map-register ./src/index.ts"
+    "lint": "eslint \"src/**\"",
+    "lint:fix": "eslint --fix \"src/**\"",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "test": "jest",
+    "prebuild": "npm run clean",
+    "build": "node .esbuildrc.js"
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
@@ -37,18 +40,21 @@
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
-    "@types/node": "^14.14.9",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "@zeit/ncc": "^0.22.3",
-    "eslint": "^7.12.0",
-    "eslint-config-prettier": "^6.14.0",
-    "eslint-plugin-import": "^2.22.1",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.0",
-    "prettier": "^2.2.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^12.19.15",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "esbuild": "^0.8.34",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "husky": "^4.3.8",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.1.2"
+    "standard-commit": "^4.0.1",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   },
   "os": [
     "linux",
