--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,6 +4,7 @@ on:
     branches: [ main, v*-dev ]
   pull_request:
     types: [ opened, synchronize, reopened ]
+    branches-ignore: [ v*-dev ]
 jobs:
   lint:
     name: Lint with ESLint + TypeCheck
@@ -40,7 +41,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-16.04, ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2019 ]
-        version: [latest, 1.49.0]
+        version: [latest, 1.58.0]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
