--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-16.04, ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2019 ]
-        version: [latest, 1.58.0]
+        version: [ latest, 1.58.0 ]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -60,10 +60,12 @@ jobs:
             --strip-common-prefix
           sentry-cli releases finalize "$VERSION"
       - name: Send Sentry test event
+        if: "!contains(matrix.os, 'win')"
         run: |
-          export SENTRY_DSN=${{ secrets.SENTRY_DSN }}
           sentry-cli send-event \
             --release="$VERSION" \
             --fingerprint="GH-DEMO" \
             --message="Hello from GitHub Actions" \
             --level=debug
+        env:
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
