--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mathieu-bour/setup-sentry-cli",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Install the Sentry CLI in your GitHub Actions workflow.",
   "keywords": [
     "github-actions",
@@ -35,13 +35,14 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/exec": "^1.0.4",
+    "@actions/github": "^5.0.0",
     "@actions/io": "^1.0.2",
     "@actions/tool-cache": "^1.6.1",
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
+    "@types/node": "^12.20.13",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "esbuild": "^0.8.34",
