ci(actions): allow set-commits to fail

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           VERSION=$(sentry-cli releases propose-version)
           sentry-cli releases new "$VERSION"
-          sentry-cli releases set-commits "$VERSION" --auto
+          sentry-cli releases set-commits "$VERSION" --auto || true
           sentry-cli releases files "$VERSION" upload-sourcemaps ./dist \
             --rewrite \
             --ext map \
