--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mathieu-bour/setup-sentry-cli",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Install the Sentry CLI in your GitHub Actions workflow.",
   "keywords": [
     "github-actions",
@@ -10,55 +10,52 @@
     "sentry-release"
   ],
   "homepage": "https://github.com/mathieu-bour/setup-sentry-cli",
-  "bugs": {
-    "url": "https://github.com/mathieu-bour/setup-sentry-cli/issues",
-    "email": "mathieu@mathrix.fr"
-  },
+  "bugs": "https://github.com/mathieu-bour/setup-sentry-cli/issues",
   "license": "MIT",
   "main": "dist/index.js",
   "author": {
     "name": "Mathieu Bour",
-    "email": "mathieu@mathrix.fr"
+    "email": "mathieu.tin.bour@gmail.com"
   },
   "browser": false,
   "repository": "github:mathieu-bour/setup-sentry-cli",
   "scripts": {
-    "prepare": "npx is-ci || husky install",
+    "prepare": "simple-git-hooks || true",
     "clean": "rimraf dist",
-    "format": "prettier --write \"**/*\"",
-    "format:check": "prettier --check \"**/*\"",
+    "format": "prettier --write '{**/*,*}.{js,ts,sol,json,yml,yaml,md}'",
+    "format:check": "prettier --check '{**/*,*}.{js,ts,sol,json,yml,yaml,md}'",
     "lint": "eslint \"src/**\"",
     "lint:fix": "eslint --fix \"src/**\"",
     "depcheck": "depcheck",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "jest",
-    "prebuild": "npm run clean",
-    "build": "node .esbuildrc.js"
+    "prebuild": "pnpm clean",
+    "build": "esbuild src/main.ts --bundle --platform=node --target=node16 --sourcemap --outfile=dist/index.js"
   },
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/io": "^1.0.2",
-    "@actions/tool-cache": "^1.6.1",
-    "source-map-support": "^0.5.19"
+    "@actions/core": "^1.10.0",
+    "@actions/io": "^1.1.2",
+    "@actions/tool-cache": "^2.0.1",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
-    "@csquare/prettier-config": "^1.1.2",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.20.13",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "depcheck": "^1.4.1",
-    "esbuild": "^0.8.34",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
+    "@mathieu-bour/prettier-config": "^1.1.0",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^16.11.68",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "depcheck": "^1.4.3",
+    "esbuild": "^0.15.12",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "jest": "^29.2.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "standard-commit": "^4.0.1",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "simple-git-hooks": "^2.8.1",
+    "standard-commit": "^4.2.6",
+    "ts-jest": "^29.0.3",
+    "typescript": "~4.8.4"
   },
   "os": [
     "linux",
@@ -66,5 +63,5 @@
     "win32"
   ],
   "private": true,
-  "prettier": "@csquare/prettier-config"
+  "prettier": "@mathieu-bour/prettier-config"
 }
