--- a/package.json
+++ b/package.json
@@ -1,67 +1,36 @@
 {
   "name": "@mathieu-bour/setup-sentry-cli",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "Install the Sentry CLI in your GitHub Actions workflow.",
-  "keywords": [
-    "github-actions",
-    "actions",
-    "sentry",
-    "sentry-cli",
-    "sentry-release"
-  ],
+  "keywords": ["github-actions", "actions", "sentry", "sentry-cli", "sentry-release"],
   "homepage": "https://github.com/mathieu-bour/setup-sentry-cli",
   "bugs": "https://github.com/mathieu-bour/setup-sentry-cli/issues",
   "license": "MIT",
-  "main": "dist/index.js",
-  "author": {
-    "name": "Mathieu Bour",
-    "email": "mathieu.tin.bour@gmail.com"
-  },
-  "browser": false,
-  "repository": "github:mathieu-bour/setup-sentry-cli",
+  "module": "dist/index.mjs",
+  "author": "Mathieu Bour <mathieu@bour.tech>",
   "scripts": {
-    "prepare": "simple-git-hooks || true",
     "clean": "rimraf dist",
-    "format": "prettier --write '{**/*,*}.{js,ts,sol,json,yml,yaml,md}'",
-    "format:check": "prettier --check '{**/*,*}.{js,ts,sol,json,yml,yaml,md}'",
-    "lint": "eslint \"src/**\"",
-    "lint:fix": "eslint --fix \"src/**\"",
+    "lint": "biome ci .",
     "depcheck": "depcheck",
-    "typecheck": "tsc -p tsconfig.json --noEmit",
-    "test": "jest",
+    "typecheck": "tsc --noEmit",
     "prebuild": "pnpm clean",
-    "build": "esbuild src/main.ts --bundle --platform=node --target=node16 --sourcemap --outfile=dist/index.js"
+    "build": "tsup"
   },
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/io": "^1.1.2",
-    "@actions/tool-cache": "^2.0.1",
-    "source-map-support": "^0.5.21"
+    "@actions/core": "^1.10.1",
+    "@actions/io": "^1.1.3",
+    "@actions/tool-cache": "^2.0.1"
   },
   "devDependencies": {
-    "@mathieu-bour/prettier-config": "^1.1.0",
-    "@types/jest": "^29.2.0",
-    "@types/node": "^16.11.68",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
-    "depcheck": "^1.4.3",
-    "esbuild": "^0.15.12",
-    "eslint": "^8.26.0",
-    "eslint-config-prettier": "^8.5.0",
-    "jest": "^29.2.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "simple-git-hooks": "^2.8.1",
+    "@biomejs/biome": "^1.5.3",
+    "@types/node": "^20.11.24",
+    "depcheck": "^1.4.7",
+    "lefthook": "^1.6.4",
+    "rimraf": "^5.0.5",
     "standard-commit": "^4.2.6",
-    "ts-jest": "^29.0.3",
-    "typescript": "~4.8.4"
+    "tsup": "^8.0.2",
+    "typescript": "^5.3.3"
   },
-  "os": [
-    "linux",
-    "darwin",
-    "win32"
-  ],
-  "private": true,
-  "prettier": "@mathieu-bour/prettier-config"
+  "os": ["linux", "darwin", "win32"],
+  "private": true
 }
