fix(action): use main.mjs as entrypoint

--- a/action.yml
+++ b/action.yml
@@ -5,8 +5,8 @@ branding:
   color: orange
   icon: triangle
 runs:
-  using: 'node20'
-  main: 'dist/index.js'
+  using: node20
+  main: dist/main.mjs
 inputs:
   version:
     description: Sentry CLI version to use. By default, the action will use the latest one.
